--- a/style.css
+++ b/style.css
@@ -30,10 +30,12 @@ body {
 	width: 22%;
 	height: 100%;
 	position: fixed;
+	display: block;
 	top:0;
 	left: 0;
-	background-color: white;
-	opacity: .1;
+	background-color: rgba(255,255,255,.1);
+	opacity: 1;
+	color: white;
 } 
 
 canvas {
