--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 	display: block;
 	top:0;
 	left: 0;
-	/*background-color: rgba(255,255,255,.1);*/
+	background-color: rgba(255,255,255,.1);
 	opacity: 1;
 	color: white;
 }
